src/objects/Aircraft_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Calculator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Calculator</label>
        <referenceTo>Aircraft_Calculator__c</referenceTo>
        <relationshipName>Aircraft_Calculator_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Aircraft__c.Name</field>
                <operation>startsWith</operation>
                <value>TBD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft_Analysis</relationshipLabel>
        <relationshipName>Aircraft_Calculator_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Savings__c</fullName>
        <label>All-In Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost__c</fullName>
        <label>All-In Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <label>Cabin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Data__c</fullName>
        <label>Cancellation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Range_1__c</fullName>
        <label>Cancellation Range 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Range_2__c</fullName>
        <label>Cancellation Range 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Forecasted_Trend__c</fullName>
        <label>Current Forecasted Trend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Savings__c</fullName>
        <label>Hours Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <label>Max Seats</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Forecasted_Trend__c</fullName>
        <label>New Forecasted Trend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Annual_Cost_Savings__c</fullName>
        <label>Operating Annual Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Annual_Cost__c</fullName>
        <label>Operating Annual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipName>Aircraft_Calculator_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aircraft Calculator Option Program</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Client_Program__c.Account_Name_Text__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipName>Aircraft_Calculator_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifying_Discounts__c</fullName>
        <label>Qualifying Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Cost__c</fullName>
        <label>Recovery Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Data__c</fullName>
        <label>Risk Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade__c</fullName>
        <formula>IF(Conversion_Rate__c &lt; 1, &quot;Downgrade&quot;, &quot;Upgrade&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade/Downgrade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Discounts__c</fullName>
        <label>Value of Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost_Savings__c</fullName>
        <label>Variable Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost__c</fullName>
        <label>Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Aircraft Analysis</label>
    <nameField>
        <label>Aircraft Analysis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft_Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>